--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/passport-jwt": "^3.0.6",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
